apps/bee/kanidm/base/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kanidm
  namespace: kanidm
spec:
  parentRefs:
    - name: bee-gateway
      namespace: gateways
      sectionName: xtinto.com-https
  hostnames:
    - idm.xtinto.com
  rules:
    - backendRefs:
        - name: kanidm
          port: 8443
